Modified to use Java URI class instead of URL, and implemented Glenn Martin's getScheme() suggestion, and added convenience functions for http/https, per Russell Wolf.  This still catches exceptions because the documentation for URI.create() makes it clear it should only be used on URIs that are assumed to be valid, because it will throw unchecked exceptions if the string was not actually a URI.  I don't want to have to wrap calls to this in try/catch blocks - I prefer the @Nullable return value style so calls to this method don't have to be wrapped in a try/catch block.  Let me know what you guys prefer - throwing exceptions vs. returning null in error conditions.